# MCP_CryptoResearch

./: README.md  crypto_kg_ontology.jsonld  crypto_kg_ontology.ttl  pyvenv.cfg
Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
mcp-farm/: inspector.config.json  inspector.config.json.bak  mcp.json  pyproject.toml  requirements-dev.txt
mcp-farm/apps/kg_streamlit/: requirements.txt  streamlit_app.py
mcp-farm/libs/mcp_common/: pyproject.toml
mcp-farm/libs/mcp_common/mcp_common/: uri.py
